--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,5 +1,6 @@
 @use './partials/variables' as *;
 @use './partials/header';   // qui non ci sono variabili quindi c'e' bisogno di aggiungerlo con l'asterisco
+@use './partials/hero';   // qui non ci sono variabili quindi c'e' bisogno di aggiungerlo con l'asterisco
 
 @import '~bootstrap/scss/bootstrap';
 
